menu overlap fix for safari

--- a/src/app/accounts/AccountSelect.scss
+++ b/src/app/accounts/AccountSelect.scss
@@ -119,8 +119,7 @@
 
   .account-select {
     height: auto;
-    flex: 1;
-    flex-shrink: 0;
+    flex: 1 0 auto;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
